# ROSGazeboDesktop

./: .gitignore  Dockerfile  README.md
lib/curiosity_mars_rover_description/: CMakeLists.txt  package.xml  setup.py
lib/curiosity_mars_rover_description/config/: curiosity_mars_rover_control.yaml
lib/curiosity_mars_rover_description/launch/: curiosity_mars_rover_control.launch  curiosity_mars_rover_spawn.launch  curiosity_mars_rover_start.launch  curiosity_mars_rover_systems.launch  main_simple.launch  main_with_objects.launch  mars_curiosity_object_world.launch  mars_curiosity_simple_world.launch
lib/curiosity_mars_rover_description/models/green-alien/meshes/: green-alien.dae
lib/curiosity_mars_rover_description/rviz/: curiosity_mars_rover.rviz
lib/curiosity_mars_rover_description/urdf/: arm.xacro  chassis.xacro  curiosity_mars_rover.gazebo  curiosity_mars_rover.xacro  curiosity_mars_rover_properties.xacro  left_wheel_group.xacro  macros.xacro  right_wheel_group.xacro  sensor_mast.xacro  wheel.xacro
lib/curiosity_mars_rover_description/worlds/: flat_mars.world  mars-with-objects.world  simple.world
lib/mars-rover/: roboMakerSettings.json
lib/mars-rover/robot_ws/src/martian_detector/: package.xml
lib/mars-rover/robot_ws/src/martian_detector/launch/: martian_detector.launch
lib/mars-rover/robot_ws/src/martian_detector/nodes/: object_detector
