<?xml version="1.0"?>
<package format="2">
  <name>curiosity_mars_rover_description</name>
  <version>0.0.0</version>
  <description>The curiosity_mars_rover_description package</description>

  <maintainer email="duckfrost@theconstructsim.com">rdaneel</maintainer>

  <license>lGPL</license>

  <buildtool_depend>catkin</buildtool_depend>



  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_plugins</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>robot_state_publisher</depend>
  <depend>transmission_interface</depend>
  <depend>diff_drive_controller</depend>
  <depend>ros_controllers</depend>
  <depend>teleop_twist_keyboard</depend>

  <!-- Support camera operations -->
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>

  <depend>xacro</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
